Header alignment fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ header nav
     justify-content: space-between;
     justify-items: center;
     align-items: center;
-    margin: 0px 100px;
+    margin: 0px 300px;
     padding: 60px 0px 0px 0px;
 }
 header nav h1
@@ -168,7 +168,7 @@ header nav h1
     justify-items: center;
     align-items: center;
     justify-content: space-between;
-    margin: 100px 400px;
+    margin: 100px 300px;
     padding: 80px 0;
    
   
